@@ -5,16 +5,16 @@ import it.unipr.ailab.jadescript.jadescript.TypeExpression;
 import it.unipr.ailab.jadescript.semantics.SemanticsModule;
 import it.unipr.ailab.jadescript.semantics.context.symbol.Operation;
 import it.unipr.ailab.jadescript.semantics.context.symbol.Property;
+import it.unipr.ailab.jadescript.semantics.helpers.CompilationHelper;
+import it.unipr.ailab.jadescript.semantics.helpers.SemanticsConsts;
 import it.unipr.ailab.jadescript.semantics.helpers.TypeHelper;
 import it.unipr.ailab.jadescript.semantics.namespace.BuiltinOpsNamespace;
 import it.unipr.ailab.jadescript.semantics.namespace.TypeNamespace;
-import it.unipr.ailab.jadescript.semantics.utils.Util.Tuple2;
 import it.unipr.ailab.maybe.Maybe;
 import it.unipr.ailab.sonneteer.SourceCodeBuilder;
 import it.unipr.ailab.sonneteer.statement.StatementWriter;
 import jadescript.util.JadescriptSet;
 import org.eclipse.emf.common.util.EList;
-import org.eclipse.xtend2.lib.StringConcatenationClient;
 import org.eclipse.xtext.common.types.JvmMember;
 import org.eclipse.xtext.common.types.JvmTypeReference;
 import org.eclipse.xtext.common.types.JvmVisibility;
@@ -27,8 +27,8 @@ import java.util.stream.Collectors;
 import static it.unipr.ailab.jadescript.semantics.helpers.TypeHelper.builtinPrefix;
 import static it.unipr.ailab.maybe.Maybe.some;
 
-public class SetType extends ParametricType implements EmptyCreatable,
-    DeclaresOntologyAdHocClass {
+public class SetType extends ParametricType
+    implements EmptyCreatable, DeclaresOntologyAdHocClass {
 
     private final Map<String, Property> properties = new HashMap<>();
     private final List<Operation> operations = new ArrayList<>();
@@ -90,22 +90,20 @@ public class SetType extends ParametricType implements EmptyCreatable,
             return;
         }
         this.addProperty(
-            new Property(
+            Property.readonlyProperty(
                 "size",
                 module.get(TypeHelper.class).INTEGER,
-                true,
-                getLocation()
-            ).setCompileByCustomJVMMethod("size", "size")
+                getLocation(),
+                Property.compileGetWithCustomMethod("size")
+            )
         );
-        operations.add(new Operation(
-            false,
-            "__add",
+        operations.add(Operation.operation(
             module.get(TypeHelper.class).VOID,
-            List.of(new Tuple2<>("element", getElementType())),
+            "__add",
+            Map.of("element", getElementType()),
+            List.of("element"),
             getLocation(),
-            (receiver, namedArgs) -> {
-                return receiver + ".add(" + namedArgs.get("element") + ")";
-            },
+            false,
             (receiver, args) -> {
                 final String s;
                 if (args.size() >= 1) {
@@ -114,58 +112,68 @@ public class SetType extends ParametricType implements EmptyCreatable,
                     s = "/*internal error: missing arguments*/";
                 }
                 return receiver + ".add(" + s + ")";
+            },
+            (receiver, namedArgs) -> {
+                return receiver + ".add(" + namedArgs.get("element") + ")";
             }
         ));
 
-        operations.add(new Operation(
-            true,
+        operations.add(Operation.operation(
+            module.get(TypeHelper.class).BOOLEAN,
             "contains",
-            module.get(TypeHelper.class).BOOLEAN,
-            List.of(new Tuple2<>("o", getElementType())),
-            getLocation()
+            Map.of("o", getElementType()),
+            List.of("o"),
+            getLocation(),
+            true
         ));
-        operations.add(new Operation(
-            true,
-            "containsAll",
+        operations.add(Operation.operation(
             module.get(TypeHelper.class).BOOLEAN,
-            List.of(new Tuple2<>("o", this)),
-            getLocation()
+            "containsAll",
+            Map.of("o", this),
+            List.of("o"),
+            getLocation(),
+            true
         ));
-        operations.add(new Operation(
-            true,
-            "containsAll",
+        operations.add(Operation.operation(
             module.get(TypeHelper.class).BOOLEAN,
-            List.of(new Tuple2<>(
+            "containsAll",
+            Map.of(
                 "o",
                 module.get(TypeHelper.class).LIST.apply(Arrays.asList(
                     getElementType()))
-            )),
-            getLocation()
+            ),
+            List.of("o"),
+            getLocation(),
+            true
         ));
-        operations.add(new Operation(
-            true,
-            "containsAny",
+        operations.add(Operation.operation(
             module.get(TypeHelper.class).BOOLEAN,
-            List.of(new Tuple2<>("o", this)),
-            getLocation()
+            "containsAny",
+            Map.of("o", this),
+            List.of("o"),
+            getLocation(),
+            true
         ));
-        operations.add(new Operation(
-            true,
-            "containsAny",
+        operations.add(Operation.operation(
             module.get(TypeHelper.class).BOOLEAN,
-            List.of(new Tuple2<>(
+            "containsAny",
+            Map.of(
                 "o",
-                module.get(TypeHelper.class).LIST.apply(Arrays.asList(
-                    getElementType()))
-            )),
-            getLocation()
+                module.get(TypeHelper.class).LIST.apply(
+                    Arrays.asList(getElementType())
+                )
+            ),
+            List.of("o"),
+            getLocation(),
+            true
         ));
-        operations.add(new Operation(
-            false,
-            "clear",
+        operations.add(Operation.operation(
             module.get(TypeHelper.class).VOID,
+            "clear",
+            Map.of(),
             List.of(),
-            getLocation()
+            getLocation(),
+            false
         ));
         this.initializedProperties = true;
     }
@@ -181,7 +189,8 @@ public class SetType extends ParametricType implements EmptyCreatable,
 
     @Override
     public boolean isSendable() {
-        return getTypeArguments().stream().map(TypeArgument::ignoreBound)
+        return getTypeArguments().stream()
+            .map(TypeArgument::ignoreBound)
             .allMatch(IJadescriptType::isSendable);
     }
 
@@ -236,6 +245,12 @@ public class SetType extends ParametricType implements EmptyCreatable,
 
 
     @Override
+    public boolean requiresAgentEnvParameter() {
+        return false;
+    }
+
+
+    @Override
     public Maybe<IJadescriptType> getElementTypeIfCollection() {
         return some(getElementType());
     }
@@ -248,7 +263,7 @@ public class SetType extends ParametricType implements EmptyCreatable,
 
 
     @Override
-    public void declareSpecificOntologyClass(
+    public void declareAdHocClass(
         EList<JvmMember> members,
         Maybe<ExtendingFeature> feature,
         HashMap<String, String> generatedSpecificClasses,
@@ -258,89 +273,116 @@ public class SetType extends ParametricType implements EmptyCreatable,
         Function<TypeExpression, String> schemaNameForSlotProvider,
         SemanticsModule module
     ) {
-        feature.safeDo(featureSafe -> {
-            IJadescriptType elementType = this.getElementType();
-            String className = getAdHocSetClassName(elementType);
-            if (!generatedSpecificClasses.containsKey(className)) {
-                members.add(module.get(JvmTypesBuilder.class).toClass(
+        if (feature.isNothing()) {
+            return;
+        }
+
+        final ExtendingFeature featureSafe = feature.toNullable();
+
+        IJadescriptType elementType = this.getElementType();
+        String className = getAdHocSetClassName(elementType);
+
+        if (generatedSpecificClasses.containsKey(className)) {
+            return;
+        }
+
+        final JvmTypesBuilder jvmTB =
+            module.get(JvmTypesBuilder.class);
+
+        members.add(jvmTB.toClass(
+            featureSafe,
+            className,
+            itClass -> {
+                itClass.setStatic(true);
+                itClass.setVisibility(JvmVisibility.PUBLIC);
+                final TypeHelper typeHelper =
+                    module.get(TypeHelper.class);
+
+                itClass.getSuperTypes().add(typeHelper.typeRef(
+                    JadescriptSet.class,
+                    elementType.asJvmTypeReference()
+                ));
+
+
+                itClass.getMembers().add(jvmTB.toMethod(
                     featureSafe,
-                    className,
-                    itClass -> {
-                        itClass.setStatic(true);
-                        itClass.setVisibility(JvmVisibility.PUBLIC);
-                        itClass.getSuperTypes()
-                            .add(module.get(TypeHelper.class).typeRef(
-                                jadescript.util.JadescriptSet.class,
-                                elementType.asJvmTypeReference()
-                            ));
-                        itClass.getMembers().add(module.get(JvmTypesBuilder.class).toMethod(
+                    "__fromSet",
+                    typeHelper.typeRef(className),
+                    itMeth -> {
+                        itMeth.setVisibility(JvmVisibility.PUBLIC);
+                        itMeth.setStatic(true);
+                        itMeth.getParameters().add(jvmTB.toParameter(
                             featureSafe,
-                            "__fromSet",
-                            module.get(TypeHelper.class).typeRef(className),
-                            itMeth -> {
-                                itMeth.setVisibility(JvmVisibility.PUBLIC);
-                                itMeth.setStatic(true);
-                                itMeth.getParameters().add(module.get(
-                                    JvmTypesBuilder.class).toParameter(featureSafe,
-                                    "set",
-                                    module.get(TypeHelper.class).typeRef(
-                                        java.util.Set.class,
-                                        elementType.asJvmTypeReference()
-                                    )
-                                ));
-                                module.get(JvmTypesBuilder.class).setBody(
-                                    itMeth,
-                                    new StringConcatenationClient() {//TODO use scb
-                                        @Override
-                                        protected void appendTo(
-                                            TargetStringConcatenation target
-                                        ) {
-                                            target.append(className + " " +
-                                                "result = new " + className + "();\n" +
-                                                "  java.util.List<" +
-                                                module.get(TypeHelper.class).noGenericsTypeName(
-                                                    elementType.compileToJavaTypeReference()) +
-                                                "> elements = new java.util" +
-                                                ".ArrayList<>();\n" +
-                                                "  set.forEach(elements::add)" +
-                                                ";\n" +
-                                                "  result.setElements" +
-                                                "(elements);\n" +
-                                                "  return result;");
-                                        }
-                                    }
-                                );
-                            }
+                            "set",
+                            typeHelper.typeRef(
+                                JadescriptSet.class,
+                                elementType.asJvmTypeReference()
+                            )
                         ));
+
+                        module.get(CompilationHelper.class).createAndSetBody(
+                            itMeth,
+                            scb -> {
+                                final String typeName =
+                                    typeHelper.noGenericsTypeName(
+                                        elementType.compileToJavaTypeReference()
+                                    );
+                                scb.line(className + " result = " +
+                                    "new " + className + "();");
+                                scb.line(
+                                    "java.util.List<" + typeName +
+                                        "> elements = new java.util" +
+                                        ".ArrayList<>();"
+                                );
+                                scb.line("set.forEach(elements::add);");
+                                scb.line("result.setElements(elements);");
+                                scb.line("return result;");
+                            }
+                        );
                     }
                 ));
-                generatedSpecificClasses.put(className, getCategoryName());
-                addSchemaWriters.add(w.simpleStmt(
-                    "add(new jade.content.schema.ConceptSchema(\"" + className + "\"), " +
-                        "" + className + ".class);"));
-                describeSchemaWriters.add(new StatementWriter() {
-                    @Override
-                    public void writeSonnet(SourceCodeBuilder scb) {
-                        EList<TypeExpression> typeParameters =
-                            slotTypeExpression
-                            .getCollectionTypeExpression().getTypeParameters();
-                        if (typeParameters != null && typeParameters.size() == 1) {
-
-                            scb.add(
-                                "jadescript.content.onto.Ontology" +
-                                    ".__populateSetSchema(" +
-                                    "(jade.content.schema.TermSchema) " +
-                                    "getSchema(" +
-                                    schemaNameForSlotProvider.apply(
-                                        typeParameters.get(0)) + "), " +
-                                    "(jade.content.schema.ConceptSchema) getSchema(\"" + className + "\"));");
-                        }
-
-                    }
-                });
             }
+        ));
 
+        generatedSpecificClasses.put(className, getCategoryName());
+
+        addSchemaWriters.add(SemanticsConsts.w.simpleStmt(
+            "add(new jade.content.schema.ConceptSchema(\"" +
+                className + "\"), " + className + ".class);"));
+
+        describeSchemaWriters.add(new StatementWriter() {
+            @Override
+            public void writeSonnet(SourceCodeBuilder scb) {
+                EList<TypeExpression> typeParameters = slotTypeExpression
+                    .getCollectionTypeExpression().getTypeParameters();
+
+                if (typeParameters == null || typeParameters.size() != 1) {
+                    return;
+                }
+
+                scb.add(
+                    "jadescript.content.onto.Ontology" +
+                        ".__populateSetSchema(" +
+                        "(jade.content.schema.TermSchema) " +
+                        "getSchema(" + schemaNameForSlotProvider
+                        .apply(typeParameters.get(0)) + "), " +
+                        "(jade.content.schema.ConceptSchema) " +
+                        "getSchema(\"" + className + "\"));");
+
+            }
         });
+    }
+
+
+    @Override
+    public String getAdHocClassName() {
+        return getAdHocSetClassName(getElementType());
+    }
+
+
+    @Override
+    public String getConverterToAdHocClassMethodName() {
+        return "__fromSet";
     }
 
 }
